deployment/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  ports:
  - port: 7003
    name: http
  selector:
    app: payment-service

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  labels:
    app: payment-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
      version: v1
  template:
    metadata:
      labels:
        app: payment-service
        version: v1
      name: payment-service
    spec:
      containers:
        - name: payment-service
          image: maccommerce/payment-service:latest
          ports:
            - containerPort: 7003
