deployment/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: payment-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-service
spec:
  hosts:
  - "*"
  gateways:
  - payment-service-gateway
  http:
  - match:
    - uri:
        prefix: /cards
    route:
    - destination:
        host: payment-service
        port:
          number: 7003
